Added new components, fixed styling and continued to plan interface

--- a/readme
+++ b/readme
@@ -5,4 +5,10 @@ Tech Used
 -React Dom 
 -Typescript 
 -React Navigation
-- 
+-Redux 
+
+UI
+-Stylesheet
+-Native Base
+-React Native Elements
+-React Native Paper 
